# deposito_Marano

./: README.md  esercizio iris.py  esercizio_PCA.py  esercizio_PCA.txt  esercizio_credit_card.py  esercizio_cross_validation_auc.py  esercizio_dbscan.py  esercizio_iris_con_validation.py  esercizio_mall_customers.py
Agenti/: README.md
Agenti/AGENTE-1/research_crew/: report.md
Agenti/AGENTE-2/etichal_flow/: flow.png.html  output.md
Agenti/AGENTE-4/flow_somma/: README.md  pyproject.toml
Agenti/AGENTE-4/flow_somma/src/flow_somma/: main.py
Agenti/AGENTE-4/flow_somma/src/flow_somma/crews/sum_crew/: sum_crew.py
Agenti/AGENTE-4/flow_somma/src/flow_somma/crews/sum_crew/config/: agents.yaml  tasks.yaml
Agenti/AGENTE-4/flow_somma/src/flow_somma/tools/: custom_tool.py
Agenti/AGENTE5-RAG/flow_rag/: README.md  pyproject.toml
Agenti/AGENTE5-RAG/flow_rag/faiss_index/: index.faiss  index.pkl
Agenti/AGENTE5-RAG/flow_rag/output/: answer.md
Agenti/AGENTE5-RAG/flow_rag/src/flow_rag/: main.py  rag_system.py
Agenti/AGENTE5-RAG/flow_rag/src/flow_rag/crews/rag_crew/: rag_crew.py
Agenti/AGENTE5-RAG/flow_rag/src/flow_rag/crews/rag_crew/config/: agents.yaml  tasks.yaml
Agenti/AGENTE5-RAG/flow_rag/src/flow_rag/tools/: custom_tool.py  utility.py  utils.py
Embedding/: .gitignore  embedding.py
Esercizio DBSCAN/: esercizio_dbscan.py
Esercizio k-means/: esercizio_mall_customers.py
RAG/RAG_2/: requirements.txt
RAG/RAG_3-Qdrant/: .requirements.txt  qdrant_rag.py
RAG_1/: .gitignore  rag_1.py  requirements.txt
RAG_2/: .gitignore  rag_2.py
(+24 files in other folders)
