[project]
name = "flow_somma"
version = "0.1.0"
description = "flow_somma using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.193.2,<1.0.0",
]

[project.scripts]
kickoff = "flow_somma.main:kickoff"
run_crew = "flow_somma.main:kickoff"
plot = "flow_somma.main:plot"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"
